# ESP32-Smart-Handheld-Terminal

./: README.md
Smart_Handheld_Terminals/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
Smart_Handheld_Terminals/main/: CMakeLists.txt  idf_component.yml  main.c
Smart_Handheld_Terminals/main/myi2c/: myi2c.c  myi2c.h
Smart_Handheld_Terminals/main/myspi/: myspi.c  myspi.h
Smart_Handheld_Terminals/main/sdcard/: sdcard.c  sdcard.h
Smart_Handheld_Terminals/main/sensor/: sensor.c  sensor.h  sensor_mpu6050.c  sensor_mpu6050.h
